点击图片事件翻转的实现以及图片在舞台的随机分布

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,6 +4,8 @@ html,body{
   height: 100%;
   background-color: #222;
 }
+
+
 .content{
   width: 100%;
   height: 100%;
@@ -13,7 +15,8 @@ html,body{
 .stage{
   position: relative;
   width: 100%;
-  height: 680px;
+  // height: 680px;
+  height: 100%;
 }
 
 // image -- start
@@ -23,6 +26,62 @@ html,body{
   height: 100%;
   overflow: hidden;
   background-color: #ddd;
+  perspective: 1800px;
+  @at-root{
+    .img-figure{
+      position: absolute;
+      width: 320px;
+      height: 360px;
+      margin: 0;
+      padding: 40px;
+      box-sizing: border-box;
+      cursor: pointer;
+      background-color: #fff;
+      transform-style: preserve-3d;
+      img{
+        width: 240px;
+        height: 240px;
+      }
+      &.is-inverse {
+        transform:  rotateY(180deg);
+      }
+    }
+    figcaption{
+      text-align: center;
+      .img-title{
+        margin: 20px 0 0 0;
+        color: #a7a0a2;
+        font-size: 16px;
+
+      }
+      .img-back {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+        padding: 50px 40px;
+        overflow: auto;
+
+        color: #a7a0a2;
+        font-size: 22px;
+        line-height: 1.25;
+        text-align: left;
+
+        background-color: #fff;
+
+        box-sizing: border-box;
+        transform: rotateY(180deg) translateZ(1px);
+        backface-visibility: hidden;
+
+        p {
+          margin: 0;
+        }
+      }
+    }
+  }
+
 }
 
 // controller -- start
