--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -38,12 +38,14 @@ html,body{
       cursor: pointer;
       background-color: #fff;
       transform-style: preserve-3d;
+      transition: all 0.6s ease-in-out ;
+      transform-origin: 0 50% 0;
       img{
         width: 240px;
         height: 240px;
       }
       &.is-inverse {
-        transform:  rotateY(180deg);
+        transform:  translateX(320px) rotateY(180deg);
       }
     }
     figcaption{
@@ -58,7 +60,7 @@ html,body{
         position: absolute;
         top: 0;
         left: 0;
-
+        cursor: pointer;
         width: 100%;
         height: 100%;
         padding: 50px 40px;
