--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,6 @@
+
 /* Base Application Styles */
+
 html,body{
   width: 100%;
   height: 100%;
@@ -94,5 +96,32 @@ html,body{
   z-index: 101;
   width: 100%;
   text-align: center;
+  @at-root{
+    .controller-unit{
+      display: inline-block;
+      margin: 0 5px;
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
+      text-align: center;
+      vertical-align: middle;
+      cursor: pointer;
+      background-color: #aaa;
+      border-radius: 50%;
+      transform: scale(0.5);
+      i{
+        width: 30px;
+        height: 30px;
+        display: none;
+        color: #fff;
+      }
+      &.is-center{
+        transform: scale(1);
+        i{
+          display: inline-block;
+        }
+      }
+    }
+  }
 }
 
