--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -45,9 +45,11 @@ html,body{
       img{
         width: 240px;
         height: 240px;
+        backface-visibility: hidden;
       }
       &.is-inverse {
         transform:  translateX(320px) rotateY(180deg);
+
       }
     }
     figcaption{
@@ -56,7 +58,7 @@ html,body{
         margin: 20px 0 0 0;
         color: #a7a0a2;
         font-size: 16px;
-
+        backface-visibility: hidden;
       }
       .img-back {
         position: absolute;
@@ -74,11 +76,9 @@ html,body{
         text-align: left;
 
         background-color: #fff;
-
-        box-sizing: border-box;
-        transform: rotateY(180deg) translateZ(1px);
         backface-visibility: hidden;
-
+        box-sizing: border-box;
+        transform: rotateY(-180deg) translateZ(1px);
         p {
           margin: 0;
         }
@@ -109,6 +109,7 @@ html,body{
       background-color: #aaa;
       border-radius: 50%;
       transform: scale(0.5);
+      transition: all 0.6s ease-in-out;
       i{
         width: 30px;
         height: 30px;
@@ -120,6 +121,10 @@ html,body{
         i{
           display: inline-block;
         }
+      }
+
+      &.is-inverse{
+        transform: rotateY(180deg);
       }
     }
   }
